--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Medical Rights</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="he" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>עזרה במימוש זכויות רפואיות</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #e3f2fd, #bbdefb);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      direction: rtl;
+    }
+    .card {
+      background: white;
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      max-width: 500px;
+      text-align: center;
+    }
+    h1 {
+      color: #0d47a1;
+      margin-bottom: 1rem;
+    }
+    p {
+      color: #333;
+      margin-bottom: 2rem;
+      line-height: 1.6;
+    }
+    button {
+      background: #1976d2;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: #0d47a1;
+    }
+    @media (max-width: 600px) {
+      .card {
+        margin: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>מימוש זכויות רפואיות</h1>
+    <p>ברוכים הבאים! כאן תוכלו לקבל ייעוץ והכוונה במימוש זכויות רפואיות מול ביטוח לאומי, קופות החולים, חברות הביטוח ועוד.</p>
+    <button onclick="alert('בהמשך תועברו לטופס התחלה')">התחילו כאן</button>
+  </div>
+</body>
 </html>
