--- a/start.html
+++ b/start.html
@@ -2,51 +2,50 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>בחרו תחום זכויות</title>
+  <meta charset="UTF-8">
+  <title>בחר תחום זכויות</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #f3f3f3;
+      background: #f0f0f0;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
+      margin: 0;
       direction: rtl;
     }
-    .container {
-      background: white;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-      max-width: 600px;
-      text-align: center;
+    h1 {
+      color: #2c3e50;
+      margin-bottom: 30px;
     }
-    h2 {
-      color: #0d47a1;
-      margin-bottom: 1.5rem;
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
     }
     .button {
-      background: #1976d2;
+      text-decoration: none;
+      display: inline-block;
+      padding: 15px 30px;
+      background-color: #3498db;
       color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      margin: 0.5rem;
-      font-size: 1rem;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
+      border-radius: 8px;
+      font-size: 18px;
+      text-align: center;
+      min-width: 280px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: background 0.3s;
     }
     .button:hover {
-      background: #0d47a1;
+      background-color: #2980b9;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>בחרו תחום למימוש זכויות:</h2>
+  <h1>בחר תחום זכויות</h1>
+  <div class="buttons">
     <a href="bituach-leumi.html" class="button">זכויות בביטוח לאומי</a>
     <a href="bituach.html" class="button">זכויות מול חברות ביטוח</a>
     <a href="kupot.html" class="button">זכויות מול קופות חולים</a>
