--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     body {
       margin: 0;
       font-family: 'Heebo', sans-serif;
-      background: url('DSC_1.jpg') no-repeat center center fixed;
+      background: url('DSC_1.jpg') no-repeat center center fixed; 
+      background-position: top;
       background-size: cover;
     }
 
