--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Heebo', sans-serif;
-      background: url('DSC_1.jpg') no-repeat center center fixed; 
+      background: url('צילום מסך 2025-05-07 215242.jpg') no-repeat center center fixed; 
       background-position: top;
       background-size: cover;
     }
