--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       font-family: 'Heebo', sans-serif;
       background: url('צילום מסך 2025-05-07 215630.jpg') no-repeat center center fixed; 
       background-size: cover;
+      background-position: top;
+
     }
 
     .overlay {
