--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     body {
       margin: 0;
       font-family: 'Heebo', sans-serif;
-      background: url('צילום מסך 2025-05-07 215630.jpg') no-repeat center center fixed; 
+      <img src="background_optimized.webp" alt="צילום מסך 2025-05-07 215630.jpg" style="width: 100%; height: auto; display: block;" />
+
       background-size: cover;
       background-position: top;
 
